[package]
name = "artoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.1.0"

[dev-dependencies]
criterion = { version = "0.3.0", features = ["html_reports"] }
rand = "0.8.5"
page_size = "0.5.0"
skiplist = "0.4.0"
difference = "2.0"

[[bench]]
name = "artoo_benchmark"
harness = false